--- a/css/main.less
+++ b/css/main.less
@@ -21,7 +21,7 @@ body
 {
 	font-family: "mr-eaves-xl-modern";
 	color:@black;
-	background:@off-white;
+	background:@white;
 	overflow-y:scroll;
 
 	@media (max-width:480px)
@@ -116,16 +116,18 @@ h2
 
 .gallery
 {
-	padding:0;
 	list-style: none;
+	padding:0 30px;
+
 	li
 	{		
 		display:block;
 		float:left;
-		width:50%;
+		width:~"calc(50% - 40px)";
 		cursor:zoom-in;	
-		margin:0;
-
+		margin:16px;
+		padding:2px;
+		background:@light-gray;
 
 	}
 	img
@@ -148,7 +150,7 @@ h2
 	{
 		@media (min-width:@mid-width)
 		{
-			width:25%;
+			width:~"calc(25% - 40px)";
 		}
 	}
 }
@@ -229,6 +231,10 @@ h2
 #work_gallery
 {
 	margin-top:40px;
+	li
+	{
+		background:@gray;
+	}
 }
 
 
@@ -297,7 +303,10 @@ footer
 /*--------------------------------------------*/
 #page_process
 {
-	
+		background-image: url('../img/reach_brochure/bg.jpg');
+		background-attachment:fixed;
+		background-size:cover;
+		background-position:center center;
 	p, li
 	{
 		font-size:1.12em;
@@ -311,7 +320,7 @@ footer
 
 #process_hero
 {
-	background-color:@black;
+	background-color:#7eafc8;
 	background-image: url('../img/reach_brochure/brochure_top.jpg');
 	background-size:contain;
 	background-repeat:no-repeat;
@@ -328,8 +337,8 @@ footer
 
 #process_main
 {
-	background:@black;
 	padding-top:80px;
+	background:rgba(126, 175, 200, 0.95);
 }
 #background_display{
 	height:80vh;
@@ -351,10 +360,11 @@ footer
 		h2
 		{
 			display:inline-block;
-			background:@white;
+			padding:25px;
 			font-weight:300;
-			letter-spacing:1px;
-			font-size:1em;
+			background:@white;
+			letter-spacing:5px;
+			font-size:1.125em;
 			margin:0;
 		}
 	}
@@ -364,12 +374,27 @@ footer
 .process_outer
 {
 	width:100%;
-	max-width:800px;
-	margin-top:80px;
 	.process_inner
 	{
 		background:@off-white;
-		box-shadow:rgba(0, 0, 0, 0.5) 0px 5px 30px;
+		box-shadow:rgba(0, 0, 0, 0.2) 0px 5px 30px;
+	}
+	&.left
+	{
+		margin-top:80px;
+		max-width:800px;
+		float:left;
+	}
+	&.right
+	{
+		margin-top:80px;
+		max-width:800px;
+		float:right;
+	}
+	&.final
+	{
+		margin-top:160px;
+		float:left;		
 	}
 }
 
@@ -399,11 +424,45 @@ footer
 {
 	padding: 0 40px 80px;
 }
-.left
+
+.process_return_link_container
 {
-	float:left;
+	text-align:center;
+	
+	margin:0 auto 120px;
 }
-.right
+.process_return_link_large
 {
-	float:right;
+	display:inline-block;
+	padding:20px;
+	border:2px solid @white;
+	color:@white;
+	text-decoration:none;
+	letter-spacing: 2px;
+	&:hover
+	{
+		background:@white;
+		color:rgba(126, 175, 200, 1);
+	}
+
+
+}
+
+.process_return_link_small
+{
+	font-size:.85em;
+	display:inline-block;
+	padding:8px 8px 6px 10px;
+	margin-bottom:2em;
+	text-decoration:none;
+	border:1px solid @gray;
+	color:@gray;
+	letter-spacing: 1px;
+	&:hover
+	{
+		background:@gray;
+		color:@white;
+	}
+
+
 }
