--- a/css/main.less
+++ b/css/main.less
@@ -117,8 +117,7 @@ h2
 .gallery
 {
 	list-style: none;
-	padding:0 30px;
-
+	padding:0 20px;
 	li
 	{		
 		display:block;
@@ -422,10 +421,10 @@ footer
 
 .process_content
 {
-	padding: 0 40px 80px;
+	padding: 0 40px 56px;
 }
 
-.process_return_link_container
+.process_return_link_large_container
 {
 	text-align:center;
 	
@@ -448,21 +447,22 @@ footer
 
 }
 
+
 .process_return_link_small
 {
-	font-size:.85em;
+	font-size:1em;
 	display:inline-block;
 	padding:8px 8px 6px 10px;
-	margin-bottom:2em;
+	margin:10px;
 	text-decoration:none;
-	border:1px solid @gray;
-	color:@gray;
+	border:1px solid @white;
+	color:@white;
 	letter-spacing: 1px;
+	position:absolute;
 	&:hover
 	{
-		background:@gray;
-		color:@white;
+		background:@white;
+		color:rgba(126, 175, 200, 1);
 	}
-
 
 }
