--- a/css/main.less
+++ b/css/main.less
@@ -50,10 +50,43 @@ body
 	position:fixed;
 	top:0;
 	background:@off-white;
+	line-height:100vh;
+	text-align:center;
+
+
 }
-
-
-
+#preload_message
+{
+	vertical-align:middle;
+	font-weight:800;
+	padding:20px;
+	border:1px solid @gray;
+	color:@gray;
+	display:inline-block;
+	line-height:1em;
+	letter-spacing:2px;
+    animation: pulse 1s infinite alternate;
+	position:relative;
+	top:-3vh;
+}
+@-moz-keyframes pulse
+ { 
+  from {
+		padding:40px;
+		} 
+}
+@-webkit-keyframes pulse 
+{ 
+  from {
+		padding:40px;
+		} 
+}
+@keyframes pulse 
+{ 
+  from {
+		padding:40px;
+		} 
+}
 /*--------------------------------------------*/
 /*HEADER*/
 /*--------------------------------------------*/
@@ -151,6 +184,13 @@ h2
 		{
 			width:~"calc(25% - 40px)";
 		}
+	}
+}
+.gallery-1
+{
+	li
+	{
+		width:~"calc(100% - 40px)";
 	}
 }
 
