--- a/css/main.less
+++ b/css/main.less
@@ -90,14 +90,35 @@ body
 /*--------------------------------------------*/
 /*HEADER*/
 /*--------------------------------------------*/
-header
-{
-	background:@white;
 
+
+#page_home
+{
+	header
+	{
+		position:relative;
+		padding:50px;
+		h1 
+		{
+				font-size:1em;
+				font-weight:300;
+				text-align:center;
+				letter-spacing:1px;
+		}
+	}
+}
+#rh_logo
+{
+	display:block;
+	width:50px;
+	margin:0 auto;
+	fill:@black;
 }
 
-
-
+header
+{
+		background:@white;
+}
 h1 
 {	
 	margin:0;
@@ -210,7 +231,7 @@ h2
 		background-position:center;
 		background-repeat:no-repeat;
 		background-image:url('../img/reach_brochure/preview.jpg');
-		min-height:540px;
+		min-height:440px;
 		@media (orientation:portrait)
 		{
 			width:100%;
@@ -218,7 +239,7 @@ h2
 		}
 		@media (orientation:landscape)
 		{
-			height:80vh;
+			height:60vh;
 			background-size:contain;
 		}
 		img
@@ -231,7 +252,7 @@ h2
 			}
 			@media (orientation:landscape)
 			{
-				height:80vh;
+				height:60vh;
 			}	
 		}
 	}
