--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,4 @@
-﻿body {
-  font-family: "mr-eaves-xl-modern";
-  color: #181818;
-  background: #f9f9f9;
-  overflow-y: scroll;
-}
-@media (max-width: 480px) {
-  body {
-    font-size: 1.5em;
-    zoom: .65;
-  }
-}
-h1 {
-  margin: 0;
-  padding: 0;
-}
-a {
-  text-decoration: none;
-}
-.cf:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-/*--------------------------------------------*/
+﻿/*--------------------------------------------*/
 /*Preload*/
 /*--------------------------------------------*/
 #preload_container {
@@ -33,8 +9,9 @@ a {
   background: #f4f4f4;
   line-height: 100vh;
   text-align: center;
+  z-index: 999;
 }
-#preload_message {
+#preload_container #preload_message {
   font-family: Arial, Helvetica, sans-serif;
   vertical-align: middle;
   font-weight: 800;
@@ -64,104 +41,138 @@ a {
   }
 }
 /*--------------------------------------------*/
-/*HEADER*/
+/*header*/
 /*--------------------------------------------*/
-#top_nav_container .inner {
-  padding: 20px 40px;
-}
-#top_nav_container .title_container #rh_logo {
-  display: inline-block;
-  width: 50px;
-  fill: #181818;
-  vertical-align: middle;
-}
-#top_nav_container .title_container h1 {
-  font-family: "refrigerator-deluxe";
-  font-weight: 700;
-  letter-spacing: 2px;
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0 0 0 15px;
-  line-height: 1em;
-  color: #181818;
-}
-#top_nav_container .title_container h1 .title-2 {
-  text-align: right;
-  font-weight: 400;
-  color: #181818;
-  padding: 0 0 0 15px;
-}
-#top_nav_container a:hover #rh_logo {
-  fill: #bababa;
-}
-#top_nav_container a:hover h1 {
-  color: #bababa;
-}
-#top_nav_container a:hover h1 .title-2 {
-  color: #bababa;
-}
 header {
+  padding: 10px 0;
+  font-family: "refrigerator-deluxe";
+  letter-spacing: 2px;
   background: #f9f9f9;
 }
+header a {
+  display: block;
+  line-height: 3em;
+  color: #242424;
+}
+header a:hover {
+  opacity: .5;
+}
+header a h1 {
+  padding-left: 5px;
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 2em;
+}
+header a h1 .title-2 {
+  padding-left: 10px;
+  color: #bababa;
+  font-weight: 400;
+}
+header #rh_logo {
+  display: inline-block;
+  vertical-align: middle;
+  height: 4em;
+  fill: #242424;
+}
 /*--------------------------------------------*/
-/*Structure*/
+/*footer*/
 /*--------------------------------------------*/
-#page_home {
-  background: #f9f9f9;
+footer {
+  font-family: "refrigerator-deluxe";
+  letter-spacing: 2px;
 }
-.outer {
-  min-width: 480px;
+footer a {
+  color: #f9f9f9;
+  display: inline-block;
+  vertical-align: middle;
 }
-.inner {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 40px;
+footer a:hover {
+  color: #bababa;
 }
-.section_header_container {
-  letter-spacing: 1px;
+footer .footer_container {
+  width: 100%;
+  line-height: 3em;
 }
-.section_header_container .section_header_left {
+footer .footer_container .footer_left {
   float: left;
   width: 50%;
 }
-.section_header_container .section_header_right {
+footer .footer_container .footer_right {
   float: right;
   width: 50%;
   text-align: right;
 }
 /*--------------------------------------------*/
-/*gallery*/
+/*Body Structure*/
 /*--------------------------------------------*/
-.gallery {
-  list-style: none;
-  padding: 0 20px;
+body {
+  font-family: "mr-eaves-xl-modern";
+  color: #181818;
+  background: #242424;
+  overflow-y: scroll;
 }
-.gallery li {
-  display: block;
-  float: left;
-  width: calc(50% - 40px);
-  cursor: zoom-in;
-  margin: 16px;
-  padding: 2px;
-  background: #e0e0e0;
-}
-.gallery img {
-  display: block;
-  width: 100%;
-}
-.gallery img:hover {
-  opacity: 0.5;
-  -webkit-transition: opacity 0.5s ease 0s;
-  -o-transition: opacity 0.15s ease 0s;
-  transition: opacity 0.15s ease 0s;
-}
-@media (min-width: 960px) {
-  .gallery-4 li {
-    width: calc(25% - 40px);
+@media (max-width: 480px) {
+  body {
+    font-size: 1.5em;
+    zoom: .65;
   }
 }
-.gallery-1 li {
-  width: calc(100% - 40px);
+body h1 {
+  margin: 0;
+  padding: 0;
+}
+body a {
+  text-decoration: none;
+}
+body .cf:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+body .outer {
+  min-width: 480px;
+}
+body .inner {
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+body hr {
+  border-style: solid;
+  border-width: 1px;
+  border-color: #f9f9f9;
+  border-bottom: none;
+}
+body .section_header_container {
+  position: relative;
+  text-align: center;
+  top: -0.75em;
+  margin-bottom: 40px;
+}
+body .section_header_container h2 {
+  display: inline-block;
+  margin: 0;
+  padding: 0 12px 0 20px;
+  font-size: 1.5em;
+  text-align: center;
+  letter-spacing: 8px;
+  background: #181818;
+  color: #f9f9f9;
+}
+body .nav-social a {
+  display: inline-block;
+  vertical-align: middle;
+  height: 32px;
+  text-decoration: none;
+}
+body .nav-social a i {
+  vertical-align: top;
+}
+/*--------------------------------------------*/
+/*Page Home*/
+/*--------------------------------------------*/
+#page_home section {
+  padding: 40px 0 60px;
 }
 /*--------------------------------------------*/
 /*featured*/
@@ -169,108 +180,94 @@ header {
 #featured {
   background: #181818;
 }
-#featured .inner {
-  padding: 40px 40px 0;
-}
-#featured .featured_image {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url('../img/reach_brochure/preview.jpg');
-  min-height: 440px;
-}
-@media (orientation: portrait) {
-  #featured .featured_image {
-    width: 100%;
-    background-size: cover;
-  }
-}
-@media (orientation: landscape) {
-  #featured .featured_image {
-    height: 60vh;
-    background-size: contain;
-  }
-}
-#featured .featured_image img {
+#featured .featured_container {
   display: block;
-  visibility: hidden;
+  width: calc(100%-40px);
+  max-width: 480px;
+  padding: 5px;
+  margin: 0 auto;
+  text-align: center;
 }
-@media (orientation: portrait) {
-  #featured .featured_image img {
-    width: 100%;
-  }
-}
-@media (orientation: landscape) {
-  #featured .featured_image img {
-    height: 60vh;
-  }
-}
-#featured .featured_link {
-  padding: 0 20px 0 2px;
-  line-height: 1em;
-  display: inline-block;
+#featured .featured_container:hover {
+  -webkit-transition: background 0.25s ease-out;
+  -moz-transition: background 0.25s ease-out;
+  -o-transition: background 0.25s ease-out;
+  transition: background 0.25s ease-out;
   background: #f9f9f9;
-  text-decoration: none;
 }
-#featured .featured_link:hover {
-  color: #f9f9f9;
-  background: #3d484e;
+#featured .featured_container img {
+  display: block;
+  width: 100%;
 }
-#featured .section_header_container {
-  color: #f9f9f9;
+#featured .featured_container .featured-info {
+  display: inline-block;
+  width: 100%;
+  padding: 15px 0;
+  background: #f9f9f9;
+  color: #181818;
+  font-weight: 800;
+  letter-spacing: 4px;
 }
 /*--------------------------------------------*/
 /*work*/
 /*--------------------------------------------*/
 #work {
-  background: #e0e0e0;
+  background: #181818;
+  padding-bottom: 40px;
 }
-#work .inner {
-  padding: 40px 40px 80px;
+#work #work_gallery {
+  padding: 0;
 }
-#work_gallery {
-  margin-top: 40px;
-}
-#work_gallery li {
+#work #work_gallery li {
   background: #bababa;
 }
 /*--------------------------------------------*/
-/*footer*/
+/*gallery*/
 /*--------------------------------------------*/
-footer .inner {
-  padding: 0 40px;
+.gallery {
+  list-style: none;
 }
-footer .section_header_left {
-  line-height: 80px;
-  letter-spacing: 1px;
+.gallery li {
+  display: block;
+  float: left;
+  width: 50%;
+  position: relative;
+  cursor: zoom-in;
 }
-footer .section_header_left .title {
-  font-family: "refrigerator-deluxe";
-  letter-spacing: 2px;
-  display: inline-block;
-  margin: 0;
+.gallery .gallery-title-container {
+  position: absolute;
+  opacity: 0;
+  z-index: 0;
+  top: 0;
+  background: #242424;
+  height: 100%;
+  width: 100%;
+}
+.gallery .gallery-title-container .gallery-title {
+  color: #f9f9f9;
+  font-weight: 700;
+  position: absolute;
+  top: 45%;
   vertical-align: middle;
-  font-size: 1.25em;
-  color: #181818;
-  text-decoration: none;
+  padding: 0 20px;
+  text-align: center;
+  width: calc(100% - 40px);
 }
-footer .section_header_left .title:hover {
-  color: #999;
+.gallery .gallery-title-container:hover {
+  opacity: 0.85;
+  -webkit-transition: opacity 0.85s ease 0s;
+  -o-transition: opacity 0.5s ease 0s;
+  transition: opacity 0.5s ease 0s;
 }
-footer .section_header_right {
-  line-height: 80px;
+.gallery img {
+  position: relative;
+  display: block;
+  width: 100%;
 }
-footer .nav-social a {
-  display: inline-block;
-  vertical-align: middle;
-  height: 32px;
-  text-decoration: none;
-  color: #181818;
-}
-footer .nav-social a:hover {
-  color: #999;
-}
-footer .nav-social a i {
-  vertical-align: top;
+@media (min-width: 960px) {
+  .gallery-4 li {
+    width: 25%;
+  }
 }
 /*--------------------------------------------*/
 /*page_process*/
@@ -302,9 +299,30 @@ footer .nav-social a i {
   max-height: 500px;
   visibility: hidden;
 }
+#process_head {
+  background: #f9f9f9;
+  padding: 40px 0 60px;
+}
 #process_main {
   padding-top: 80px;
   background: rgba(126, 175, 200, 0.95);
+}
+#process_main .gallery {
+  list-style: none;
+  padding: 0 20px;
+}
+#process_main .gallery li {
+  display: block;
+  float: left;
+  width: calc(50% - 40px);
+  position: relative;
+  cursor: zoom-in;
+  margin: 16px;
+  padding: 2px;
+  background: #e0e0e0;
+}
+#process_main .gallery-1 li {
+  width: calc(100% - 40px);
 }
 #background_display {
   height: 80vh;
