--- a/css/main.less
+++ b/css/main.less
@@ -82,6 +82,11 @@ header
 		}
 		h1
 		{
+			@media (max-width:480px)
+			{
+				font-size:1.5em;
+				zoom:.8;
+			}
 			padding-left:5px;
 			display:inline-block;
 			vertical-align:middle;
@@ -97,10 +102,13 @@ header
 	}
 	#rh_logo
 	{
-		display:inline-block;
-		vertical-align:middle;
-		height:4em;
-		fill:@dark-gray;
+
+			display:inline-block;
+			vertical-align:middle;
+			height:4em;
+			fill:@dark-gray;
+		
+
 	}
 }
 
