--- a/css/main.less
+++ b/css/main.less
@@ -82,14 +82,11 @@ header
 		}
 		h1
 		{
-			@media (max-width:480px)
-			{
-				font-size:1.25em;
-			}
-			padding-left:5px;
-			display:inline-block;
-			vertical-align:middle;
-			font-size:2em;
+			display:block;
+			padding:0;
+			font-size:1.25em;
+			text-align:center;
+
 			.title-2
 			{
 				padding-left:10px;
@@ -101,9 +98,8 @@ header
 	}
 	#rh_logo
 	{
-
-			display:inline-block;
-			vertical-align:middle;
+			display:block;
+			margin: .5em auto;
 			height:4em;
 			fill:@dark-gray;
 		
