--- a/css/main.css
+++ b/css/main.css
@@ -58,15 +58,10 @@ header a:hover {
   opacity: .5;
 }
 header a h1 {
-  padding-left: 5px;
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 2em;
-}
-@media (max-width: 480px) {
-  header a h1 {
-    font-size: 1.25em;
-  }
+  display: block;
+  padding: 0;
+  font-size: 1.25em;
+  text-align: center;
 }
 header a h1 .title-2 {
   padding-left: 10px;
@@ -74,8 +69,8 @@ header a h1 .title-2 {
   font-weight: 400;
 }
 header #rh_logo {
-  display: inline-block;
-  vertical-align: middle;
+  display: block;
+  margin: .5em auto;
   height: 4em;
   fill: #242424;
 }
