--- a/css/main.less
+++ b/css/main.less
@@ -99,7 +99,7 @@ header
 	#rh_logo
 	{
 			display:block;
-			margin: .5em auto;
+			margin: 1em auto .5em;
 			height:4em;
 			fill:@dark-gray;
 		
