--- a/css/main.less
+++ b/css/main.less
@@ -70,12 +70,11 @@ header
 	padding:10px 0;
 	font-family: "refrigerator-deluxe";
 	letter-spacing:2px;
-	background:@white;
 	a
 	{
 		display:block;
 		line-height:3em;
-		color:@dark-gray;
+		color:@white;
 		&:hover
 		{
 			opacity:.5;
@@ -101,7 +100,7 @@ header
 			display:block;
 			margin: 1em auto .25em;
 			height:4em;
-			fill:@dark-gray;
+			fill:@white;
 		
 
 	}
