--- a/css/work.css
+++ b/css/work.css
@@ -71,6 +71,7 @@ sup
 	width:100%;
 	margin:0 auto;
 	background:#fbfbfb;
+	padding-bottom:20px;
 }
 .content-inner .content-info
 {
@@ -93,7 +94,7 @@ sup
 }
 .inner-image
 {
-	padding:0 3em 3em;
+	padding:0 20px 20px;
 }
 .white-border
 {
