--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,23 @@ header img
 	width:90%;
 	max-width:800px;
 }
+footer
+{
+	text-align: center;
+	padding:5em 0;
+}
+footer a
+{
+	color:#fff;
+	text-decoration: none;
+	margin:0 .125em;
+	display: inline-block;
+	opacity:.8;
+}
+footer a:hover
+{
+	opacity:1;
+}
 
 .gallery-container
 {
